--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.13.5",
     "autoprefixer": "10.4.14",
     "gsap": "^3.12.2",
+    "lamina": "^1.1.23",
     "leva": "^0.9.35",
     "next": "13.4.12",
     "postcss": "8.4.27",
