--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/three": "^9.7.3",
     "@react-three/drei": "^9.79.3",
     "@react-three/fiber": "^8.13.5",
     "autoprefixer": "10.4.14",
@@ -21,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-use-gesture": "^9.1.3",
     "tailwindcss": "3.3.3",
-    "three": "^0.154.0"
+    "three": "^0.154.0",
+    "tween.js": "^16.6.0"
   }
 }
