--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-three/drei": "^9.79.3",
     "@react-three/fiber": "^8.13.5",
     "autoprefixer": "10.4.14",
-    "gsap": "^3.12.2",
+    "gsap": "^3.12.1",
     "lamina": "^1.1.23",
     "leva": "^0.9.35",
     "next": "13.4.12",
@@ -23,7 +23,6 @@
     "react-icons": "^4.10.1",
     "react-use-gesture": "^9.1.3",
     "tailwindcss": "3.3.3",
-    "three": "^0.154.0",
-    "tween.js": "^16.6.0"
+    "three": "^0.154.0"
   }
 }
